# egm96

./: .gitignore  Cargo.toml  README.md  patch_esm.py
.github/: codecov.yml
.github/workflows/: maturin.yml  test.yml
egm96-py/: Cargo.toml  README.md  egm96.pyi  pyproject.toml
egm96-py/examples/: geog2geoc.py
egm96-py/src/: lib.rs
egm96-py/tests/: test_simple.py
examples/: convert_asc_to_bin_lz4.rs  use_embedded_egm96_grid15.rs
src/: egm96_grid15.bin.lz4  grid.rs  lib.rs  wasm.rs
