[package]
name = "egm96-py"
version = "0.4.0"
edition.workspace = true
categories.workspace = true
description.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "egm96"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.20.3"
numpy = "0.20.0"
egm96 = { path = "../" }
